DOC-2300: Replace/rename `Advanced Code Editor` with `Enhanced Code Editor` in 7.0 docs. (#3121)
* DOC-2300: Replace Advanced Code Editor with Enhanced Code Editor in 7x docs.

* Update modules/ROOT/pages/advcode.adoc

Co-authored-by: Mitchell Crompton <mitchell.crompton@tiny.cloud>

* Update modules/ROOT/pages/editor-command-identifiers.adoc

Co-authored-by: Mitchell Crompton <mitchell.crompton@tiny.cloud>

* Update modules/ROOT/partials/misc/advcode-shortcuts.adoc

* Update modules/ROOT/partials/misc/advcode-shortcuts.adoc

* DOC-2300: update shorcuts for windows/macOS.

* Update modules/ROOT/partials/misc/advcode-shortcuts.adoc

* Update modules/ROOT/partials/misc/advcode-shortcuts.adoc

---------

Co-authored-by: Mitchell Crompton <mitchell.crompton@tiny.cloud>

--- a/modules/ROOT/pages/editor-command-identifiers.adoc
+++ b/modules/ROOT/pages/editor-command-identifiers.adoc
@@ -212,7 +212,6 @@ include::partial$commands/core-table-cmds.adoc[]
 
 Commands are available for the following plugins:
 
-* xref:advancedcode[Advanced Code]
 * xref:advancedlists[Advanced Lists]
 * xref:Enhanced Tables[Enhanced Tables]
 * xref:advancedtables[Advanced Tables]
@@ -224,6 +223,8 @@ Commands are available for the following plugins:
 * xref:codesample[Code Sample]
 * xref:comments[Comments]
 * xref:directionality[Directionality]
+* xref:enhancedcodeeditor[Enhanced Code Editor]
+* xref:editimage[Enhanced Image Editing]
 * xref:emoticons[Emoticons]
 * xref:footnotes[Footnotes]
 * xref:formatpainter[Format Painter]
@@ -250,12 +251,6 @@ Commands are available for the following plugins:
 * xref:visualcharacters[Visual Characters]
 * xref:wordcount[Word Count]
 
-[[advancedcode]]
-==== Advanced Code
-
-The following command requires the xref:advcode.adoc[Advanced Code (`+advcode+`)] plugin.
-
-include::partial$commands/code-cmds.adoc[leveloffset=+3]
 
 
 [[advancedlists]]
@@ -327,6 +322,20 @@ include::partial$commands/comments-cmds.adoc[leveloffset=+3]
 The following commands require the xref:directionality.adoc[Directionality (`+directionality+`)] plugin.
 
 include::partial$commands/directionality-cmds.adoc[leveloffset=+3]
+
+[[enhancedcodeeditor]]
+==== Enhanced Code Editor
+
+The following command requires the xref:advcode.adoc[Enhanced Code Editor (`+advcode+`)] plugin.
+
+include::partial$commands/code-cmds.adoc[leveloffset=+3]
+
+[[editimage]]
+==== Enhanced Image Editing
+
+The following commands require the xref:editimage.adoc[Enhanced Image Editing (`+editimage+`)] plugin.
+
+include::partial$commands/editimage-cmds.adoc[leveloffset=+3]
 
 [[emoticons]]
 ==== Emoticons
