--- a/modules/ROOT/partials/misc/premium-plugin-list.adoc
+++ b/modules/ROOT/partials/misc/premium-plugin-list.adoc
@@ -5,6 +5,8 @@
 * xref:casechange.adoc[Case Change]
 * xref:checklist.adoc[Checklist]
 * xref:introduction-to-tiny-comments.adoc[Comments]
+* xref:advcode.adoc[Enhanced Code Editor]
+* xref:editimage.adoc[Enhanced Image Editing]
 * xref:introduction-to-mediaembed.adoc[Enhanced Media Embed]
 * xref:footnotes.adoc[Footnotes]
 * xref:formatpainter.adoc[Format Painter]
