--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -286,7 +286,6 @@
 * xref:plugins.adoc[Plugins]
 ** Premium plugins
 *** xref:a11ychecker.adoc[Accessibility Checker]
-*** xref:advcode.adoc[Advanced Code Editor]
 *** xref:advtable.adoc[Advanced Tables]
 *** xref:advanced-templates.adoc[Advanced Templates]
 *** xref:advanced-typography.adoc[Advanced Typography]
@@ -301,6 +300,8 @@
 **** xref:comments-embedded-mode.adoc[Embedded mode]
 **** xref:comments-toolbars-menus.adoc[Toolbar buttons and menu items]
 **** xref:comments-commands-events-apis.adoc[Commands, Events and APIs]
+*** xref:advcode.adoc[Enhanced Code Editor]
+*** xref:editimage.adoc[Enhanced Image Editing]
 *** Enhanced Media Embed
 **** xref:introduction-to-mediaembed.adoc[Enhanced Media Embed]
 **** xref:mediaembed-server-config.adoc[Configure Enhanced Media Embed Server]
