--- a/modules/ROOT/partials/index-pages/premium-plugins.adoc
+++ b/modules/ROOT/partials/index-pages/premium-plugins.adoc
@@ -11,12 +11,6 @@ Checks the contents of the editor for WCAG & Section 508 accessibility problems.
 
 a|
 [.lead]
-xref:advcode.adoc[Advanced Code Editor]
-
-How to setup {productname}’s Advanced Code Editor plugin.
-
-a|
-[.lead]
 xref:advtable.adoc[Advanced Tables]
 
 Add advanced functionality to tables.
@@ -56,6 +50,18 @@ a|
 xref:introduction-to-tiny-comments.adoc[Comments]
 
 The {productname} Comments plugin.
+
+a|
+[.lead]
+xref:advcode.adoc[Enhanced Code Editor]
+
+How to setup {productname}’s Enhanced Code Editor plugin.
+
+a|
+[.lead]
+xref:editimage.adoc[Enhanced Image Editing]
+
+Enhanced image editing features for {productname}.
 
 a|
 [.lead]
