--- a/modules/ROOT/pages/markdown.adoc
+++ b/modules/ROOT/pages/markdown.adoc
@@ -24,31 +24,14 @@ During this paste event, If the editor detects markdown has been pasted it will:
 * attempt to convert the markdown to HTML, while
 * add a undo level before the conversion to allow for undo of plain-text.
 
-=== Basic Syntax
 
-[NOTE]
-These syntax elements listed in the table below represent the current supported Markdown syntax for the initial release.
+[TIP]
+Below is a list of handy shortcuts for copying and pasting in `plain-text` format when using the {pluginname} plugin within {productname}.
 
-.Markdown syntax (Basic)
 [cols="1,3",options="header"]
 |===
-| Element | Markdown Syntax
-| Heading | `+# H1+`
-| | `+## H2+`
-| | `+### H3+`
-| Bold | `+**bold text**+`
-| Italic | `+*italicized text*+`
-| Blockquote | `+> blockquote+`
-| Ordered List | `+1. First item+`
-| | `+2. Second item+`
-| | `+3. Third item+`
-| Unordered List | `+- First item+`
-| | `+- Second item+`
-| | `+- Third item+`
-| Code | `++`code`++`
-| Horizontal Rule | `+---+`
-| Link | `+[title](https://www.tiny.cloud/tinymce)+`
-| Image | `+![alt text](image.jpg)+`
+| Description | Windows | MacOS
+| example | `placeholder` | `placeholder` 
 |===
 
 == Basic setup
