--- a/modules/ROOT/partials/commands/revisionhistory-cmds.adoc
+++ b/modules/ROOT/partials/commands/revisionhistory-cmds.adoc
@@ -2,7 +2,7 @@
 |===
 |Command         |Description
 
-|mceRevisionHistory   |Toggle the revision mode
+|mceRevisionHistory   |Toggle the Revision History view
 |===
 
 .Examples
