--- a/modules/ROOT/pages/shortcuts.adoc
+++ b/modules/ROOT/pages/shortcuts.adoc
@@ -24,6 +24,6 @@ liveDemo::custom-shortcut-2[tab="js"]
 
 == Example: adding a custom shortcut for a toolbar button
 
-When adding a shortcut for a custom basic toolbar or toggle button, add both a custom shortcut and a custom toolbar button. To include the keyboard shortcut information in the tooltip for a custom toolbar button, add the +shortcut+ configuration option when creating the toolbar button.
+When adding a shortcut for a custom basic toolbar or toggle button, add both a custom shortcut and a custom toolbar button. To include the keyboard shortcut information in the tooltip for a custom toolbar button, add the `+shortcut+` configuration option when creating the toolbar button.
 
 liveDemo::custom-shortcut-3[tab="js"]
