DOC-2300: Fix various issues with renaming `existing plugins` and `removal` of export plugin from plugin-list. (#3153)
* DOC-2300: Fix various issues with renaming existing plugins and removal of export plugin from pluginlist.

* Update modules/ROOT/pages/bundle-intro-setup.adoc

Co-authored-by: ltrouton <46954949+ltrouton@users.noreply.github.com>

---------

Co-authored-by: ltrouton <46954949+ltrouton@users.noreply.github.com>

--- a/modules/ROOT/pages/bundle-intro-setup.adoc
+++ b/modules/ROOT/pages/bundle-intro-setup.adoc
@@ -63,6 +63,6 @@ Proceed to setting up and deploying the containerized services:
 
 * For the Enhanced Media Embed and Link Checker service, see: xref:bundle-hyperlinking-container.adoc[Deploy the TinyMCE hyperlinking server-side component using Docker (self-hosted enterprise bundles)].
 * For the Image Editing and Export image proxy service, see: xref:bundle-imageproxy-container.adoc[Deploy the TinyMCE image proxy server-side component using Docker (self-hosted enterprise bundles)].
-* For the Spell Checker Pro service, see: xref:bundle-spelling-container.adoc[Deploy the TinyMCE spelling service server-side component using Docker (self-hosted enterprise bundles)].
-* For the Enhanced Image Editing and Export image proxy service, see: xref:bundle-imageproxy-container.adoc[Deploy the TinyMCE image proxy server-side component using Docker (self-hosted enterprise bundles)].
+* For the Spell Checker service, see: xref:bundle-spelling-container.adoc[Deploy the TinyMCE spelling service server-side component using Docker (self-hosted enterprise bundles)].
+* For the Image Editing proxy service, see: xref:bundle-imageproxy-container.adoc[Deploy the TinyMCE image proxy server-side component using Docker (self-hosted enterprise bundles)].
 * For the Spell Checker service, see: xref:bundle-spelling-container.adoc[Deploy the TinyMCE spelling service server-side component using Docker (self-hosted enterprise bundles)].
