--- a/modules/ROOT/pages/exportpdf.adoc
+++ b/modules/ROOT/pages/exportpdf.adoc
@@ -1,6 +1,6 @@
 = Export to PDF plugin
 :navtitle: Export to PDF
-:description: The Export to PDF feature lets you generate a PDF file directly from the editor.
+:description: The Export to PDF feature provides the ability to generate a PDF file directly from the editor.
 :description_short: Generate a PDF file directly from the editor.
 :keywords: plugin, exportpdf, export to pdf
 :pluginname: Export to PDF
