--- a/modules/ROOT/pages/7.0-release-notes.adoc
+++ b/modules/ROOT/pages/7.0-release-notes.adoc
@@ -120,7 +120,7 @@ This update from CodeMirror 5 to 6 should have no impact on customers utilizing 
 
 ==== Updated keyboard shortcuts for Enhanced Code Editor.
 
-With the update from CodeMirror 6 with {productname} 7.0, brings the below updated keyboard shortcuts for Enhanced Code Editor.
+With the update to CodeMirror 6 with {productname} 7.0, brings the below updated keyboard shortcuts for Enhanced Code Editor.
 
 include::partial$misc/advcode-shortcuts.adoc[leveloffset=+1]
 
