--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -3,3 +3,117 @@
 :meta_title: Documentation
 :type: index
 
+// 2 Columns, both asciidoc
+[cols=2*a]
+|===
+
+|
+[.lead]
+xref:quick-start.adoc[Quick start]
+
+Setup a basic TinyMCE 5 editor using the Tiny Cloud.
+
+|
+[.lead]
+xref:general-configuration-guide/basic-setup.adoc[Introduction & getting started]
+
+New to self-hosting TinyMCE? Start here.
+
+|
+[.lead]
+xref:cloud-deployment-guide/editor-and-features.adoc[Cloud deployment guide]
+
+Start here for Tiny Cloud.
+
+|
+[.lead]
+xref:demo/basic-example.adoc[Examples]
+
+Working examples of TinyMCE's popular functionality.
+
+|
+[.lead]
+xref:mobile.adoc[Mobile]
+
+The TinyMCE rich text editing experience for mobile devices.
+
+|
+[.lead]
+xref:configure/index.adoc[Configuration reference]
+
+The most customizable rich text editor.
+
+|
+[.lead]
+xref:plugins/index.adoc[Plugins]
+
+This section will help you configure and extend your editor instance.
+
+|
+[.lead]
+xref:ui-components/index.adoc[UI components]
+
+The configurable UI components available for customization.
+
+|
+[.lead]
+xref:enterprise/index.adoc[Premium features]
+
+Premium features from the makers of TinyMCE.
+
+|
+[.lead]
+xref:tinydrive/introduction.adoc[Tiny Drive]
+
+Tiny Drive
+
+|
+[.lead]
+xref:rtc/introduction.adoc[Real-time Collaboration (RTC)]
+
+The TinyMCE Real-time Collaboration plugin
+
+|
+[.lead]
+xref:advanced/index.adoc[Advanced topics]
+
+Information and guides for developers wanting to build advanced capabilities into TinyMCE.
+
+|
+[.lead]
+xref:integrations/index.adoc[Integrations]
+
+Faster development with integrations of TinyMCE into your favorite framework or CMS.
+
+|
+[.lead]
+xref:migration-from-4x.adoc[Migrating from TinyMCE 4]
+
+Guidance for migrating from TinyMCE 4 to TinyMCE 5.
+
+|
+[.lead]
+xref:migration-from-froala.adoc[Migrating from Froala]
+
+Upgrading your rich text editor from Froala Editor v3 to TinyMCE 5.
+
+|
+[.lead]
+xref:release-notes/index.adoc[Release notes for TinyMCE 5]
+
+|
+[.lead]
+xref:changelog.adoc[Changelog]
+
+The history of TinyMCE releases.
+
+|
+[.lead]
+xref:api/tinymce/index.adoc[API Reference]
+
+JavaScript API reference for TinyMCE
+
+// Empty cell to even out rows
+// | 
+
+|===
